module4/src/main/java/org/example/module4/adapter/web/error/ErrorCode.java
package org.example.skillbox_mod4.adapter.web.error;

public enum ErrorCode {
    NOT_FOUND_EXCEPTION,
    DONT_HAVE_PERMISSION
}
